# NaviSight

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: philippine_locations.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/anim/: slide_in_top.xml  slide_out_top.xml
app/src/main/res/drawable/: bg_bottom_sheet_modern.xml  bg_drag_handle_modern.xml  bg_popup_rounded.xml  bg_spinner_modern_chip.xml  bg_stepper_button.xml  bg_stepper_group.xml  bottom_wave.xml  circle_green.xml  circle_red.xml  dialog_battery_alert_bg_light.xml  ic_alert.xml  ic_battery_alert.xml  ic_battery_low.xml  ic_camera_off.xml  ic_default_profile.xml  ic_force_detect.xml  ic_notification_filled.xml  ic_notification_outline.xml  ic_records_filled.xml  ic_records_outline.xml  ic_settings_filled.xml  ic_settings_outline.xml  ic_stop_screen_share.xml  ic_stream.xml  ic_stream_filled.xml  ic_stream_outline.xml  ic_track_filled.xml  ic_track_outline.xml  popup_request_background.xml  qr_overlay_border.xml  quick_menu_action_ball.xml  quick_menu_drag_shadow.xml  rounded_corners_accept_button.xml  rounded_corners_decline_button.xml
app/src/main/res/layout/: activity_call.xml  activity_caregiver_home.xml  activity_main.xml  auth_fragment_container.xml  call_request_notification.xml  dialog_battery_alert.xml  dialog_detection_settings.xml  dialog_guest_quick_menu.xml  dialog_quick_menu.xml  dialog_viu_call_request.xml  (+15 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+333 files in other folders)
